force-app/main/default/objects/Lead/fields/Archivierungsgrund__c.field-meta.xml
<CustomField>
    <fullName>Archivierungsgrund__c</fullName>
    <label>Archivierungsgrund</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anderer Sortimentsschwerpunkt</fullName>
            </value>
            <value>
                <fullName>Kein Fokuskunde</fullName>
            </value>
            <value>
                <fullName>Preis zu hoch</fullName>
            </value>
            <value>
                <fullName>WKZ Forderung zu hoch</fullName>
            </value>
            <value>
                <fullName>Sonstiger Grund</fullName>
                <label>&lt;Sonstiger Grund&gt;</label>
            </value>
            <value>
                <fullName>Vertraglich Gebunden</fullName>
                <label>&lt;Vertraglich Gebunden&gt;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>