force-app/main/default/objects/Lead/fields/ExterneDatenquelle__c.field-meta.xml
<CustomField>
    <fullName>ExterneDatenquelle__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Woher stammen die Daten?</inlineHelpText>
    <label>- Andere Datenquelle</label>
    <length>88</length>
    <type>Text</type>
</CustomField>