force-app/main/default/objects/Lead/fields/Gebundenbis__c.field-meta.xml
<CustomField>
    <fullName>Gebundenbis__c</fullName>
    <inlineHelpText>Wie lange ist der Lead an den Mitbewerber gebunden?</inlineHelpText>
    <label>- Gebunden bis</label>
    <type>Date</type>
</CustomField>