force-app/main/default/objects/Lead/fields/HF_Inhaber__c.field-meta.xml
<CustomField>
    <fullName>HF_Inhaber__c</fullName>
    <externalId>true</externalId>
    <label>HF Inhaber</label>
    <length>200</length>
    <type>Text</type>
</CustomField>