force-app/main/default/objects/Lead/fields/Sonstiger_Grund__c.field-meta.xml
<CustomField>
    <fullName>Sonstiger_Grund__c</fullName>
    <inlineHelpText>Spezifizieren Sie den Archivierungsgrund mit weiteren Informationen.</inlineHelpText>
    <label>- Sonstiger Grund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>