force-app/main/default/objects/Lead/fields/Thema_Website__c.field-meta.xml
<CustomField>
    <fullName>Thema_Website__c</fullName>
    <label>Thema (Website)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualitätsmanagement</fullName>
            </value>
            <value>
                <fullName>Verkauf Österreich</fullName>
            </value>
            <value>
                <fullName>Verkauf International</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
            <value>
                <fullName>Buchhaltung/Auftragsabwicklung</fullName>
            </value>
            <value>
                <fullName>Sponsoring</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>