force-app/main/default/objects/Lead/fields/Verantwortungsbereich__c.field-meta.xml
<CustomField>
    <fullName>Verantwortungsbereich__c</fullName>
    <label>Verantwortungsbereich</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Einkauf</fullName>
            </value>
            <value>
                <fullName>F&amp;B Manager</fullName>
            </value>
            <value>
                <fullName>Finanz</fullName>
            </value>
            <value>
                <fullName>Geschäftsführung</fullName>
            </value>
            <value>
                <fullName>Inhaber</fullName>
            </value>
            <value>
                <fullName>Logistik</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
            <value>
                <fullName>Vertrieb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>