force-app/main/default/objects/Lead/validationRules/ArchiviertReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>ArchiviertReadOnly</fullName>
    <active>true</active>
    <description>Wenn ein Lead auf Status &quot;archiviert&quot; gesetzt wurde, dann ist eine Bearbeitung nicht möglich.</description>
    <errorConditionFormula>$Setup.ProcessSetting__c.IgnoreValidationRule__c &lt;&gt; 1 &amp;&amp;

AND(
ISPICKVAL( PRIORVALUE(Status ), &quot;Archiviert&quot;),
NOT(ISNEW()),
NOT(ISCHANGED(Status))
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Archivierte Leads können nicht bearbeitet werden. 
Ändern Sie den Lead Status um ihn bearbeiten zu können.</errorMessage>
</ValidationRule>