force-app/main/default/objects/Lead/validationRules/Archivierungsgrund.validationRule-meta.xml
<ValidationRule>
    <fullName>Archivierungsgrund</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ProcessSetting__c.IgnoreValidationRule__c &lt;&gt; 1 &amp;&amp;

AND(

TEXT (Status) = &quot;Archiviert&quot;,

ISBLANK (TEXT (Archivierungsgrund__c) )

)</errorConditionFormula>
    <errorDisplayField>Archivierungsgrund__c</errorDisplayField>
    <errorMessage>Bitte wählen Sie einen Archivierungsgrund aus.</errorMessage>
</ValidationRule>