force-app/main/default/objects/Lead/validationRules/Externe_Datenquelle.validationRule-meta.xml
<ValidationRule>
    <fullName>Externe_Datenquelle</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ProcessSetting__c.IgnoreValidationRule__c &lt;&gt; 1 &amp;&amp;

AND(

TEXT (LeadSource) = &quot;Externe Datenquelle&quot;,

ISBLANK( ExterneDatenquelle__c)

)</errorConditionFormula>
    <errorDisplayField>ExterneDatenquelle__c</errorDisplayField>
    <errorMessage>Bitte geben Sie Ihre externe Datenquelle an.</errorMessage>
</ValidationRule>