force-app/main/default/objects/Lead/validationRules/Sonstiger_Grund.validationRule-meta.xml
<ValidationRule>
    <fullName>Sonstiger_Grund</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ProcessSetting__c.IgnoreValidationRule__c &lt;&gt; 1 &amp;&amp;

AND(

TEXT (Archivierungsgrund__c) = &quot;Sonstiger Grund&quot;,

ISBLANK( Sonstiger_Grund__c )

)</errorConditionFormula>
    <errorDisplayField>Sonstiger_Grund__c</errorDisplayField>
    <errorMessage>Bitte erläutern Sie den Archivierungsgrund.</errorMessage>
</ValidationRule>