force-app/main/default/objects/Lead/validationRules/Telefonnummer_Laendercode.validationRule-meta.xml
<ValidationRule>
    <fullName>Telefonnummer_Laendercode</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ProcessSetting__c.IgnoreValidationRule__c &lt;&gt; 1 &amp;&amp;

NOT(
REGEX(Phone, &quot;^\\+{0,1}[1-9]\\d{1,14}$&quot;)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Bitte prüfen Sie die Formatierung der Telefonnummer.</errorMessage>
</ValidationRule>