force-app/main/default/objects/Lead/validationRules/Vertraglich_gebunden_bis.validationRule-meta.xml
<ValidationRule>
    <fullName>Vertraglich_gebunden_bis</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ProcessSetting__c.IgnoreValidationRule__c &lt;&gt; 1 &amp;&amp;

AND(

TEXT (Archivierungsgrund__c) = &quot;Vertraglich gebunden&quot;,

ISBLANK( Gebundenbis__c )

)</errorConditionFormula>
    <errorDisplayField>Gebundenbis__c</errorDisplayField>
    <errorMessage>Bitte geben Sie ein Datum ein.</errorMessage>
</ValidationRule>