force-app/main/default/objects/Lead/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>In Bearbeitung</value>
    </filters>
    <label>Alle Leads</label>
</ListView>