force-app/main/default/objects/Lead/listViews/Archiviert.listView-meta.xml
<ListView>
    <fullName>Archiviert</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Archiviert</value>
    </filters>
    <label>Status: Archiviert</label>
</ListView>