force-app/main/default/objects/Lead/listViews/Meine.listView-meta.xml
<ListView>
    <fullName>Meine</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>Meine Leads</label>
</ListView>